--- a/app/src/main/res/layout/why.xml
+++ b/app/src/main/res/layout/why.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Cén Fáth/Tuige/Cad ina thaobh"/>
 
         <TextView
             android:layout_width="wrap_content"
