--- a/app/src/main/res/layout/defart.xml
+++ b/app/src/main/res/layout/defart.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Singular"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,18 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="The singular definite article, 'an', is the way of expressing 'the' in Irish for nouns that stand in singular form. The definite article shows whether a word is masculine or feminine depending on whether or not it causes lenition on the following noun."/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="\t• an bhean - the woman\n\t• an fear - the man\n\t• an Aoine - Friday\n\t• an Iúil - July"/>
+
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +76,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Plural"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +86,18 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="The plural definite article, 'na', is the way of expressing 'the' in Irish for nouns that stand in plural form. The definite article for plural is the same in all cases and genders, although words following the article may be eclipsed depending on whether or not the noun following stands in the genitive case."/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="\t• na mná - the women\n\t• na fir - the men\n\t• na cathracha - the cities\n\t• na deartháireacha - the brothers"/>
+
 
         <View
             android:layout_width="fill_parent"
