--- a/app/src/main/res/layout/indefart.xml
+++ b/app/src/main/res/layout/indefart.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Singular"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,18 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="The singular indefinite article in Irish does not exist. In order to express the word 'a' from English in Irish whereby an indefinite amount is expressed, one omits any article and the noun stands on its own."/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="\t• bean - a woman/woman\n\t• fear - a man/man\n\t• bord - a table/table\n\t• ríomhaire - a computer/computer"/>
+
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +76,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Plural"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +86,17 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="The plural indefinite article in Irish does not exist. This also does not exist in English. To express a plural noun indefinitely, one must leave the noun without any article affixed to it."/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="\t• mná - women\n\t• fir - men\n\t• cathracha - the cities\n\t• deartháireacha - brothers"/>
+
 
         <View
             android:layout_width="fill_parent"
